cmbuild/cmbuild-plugins/src/main/java/org/crossmobile/plugin/parser/antlr/CMAnnotParser.java
// Generated from CMAnnot.g4 by ANTLR 4.7.1
package org.crossmobile.plugin.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CMAnnotParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, LINE_COMMENT=37, COMMENT=38, 
		WS=39, UI_APPEARANCE_SELECTOR=40, UIKIT_EXTERN=41, NULLABLE=42, NONNULL=43, 
		EXTERN=44, ONEWAY=45, UNSIGNED=46, KINDOF=47, ID=48, VERSION=49, NUM=50;
	public static final int
		RULE_classdef = 0, RULE_protinheritance = 1, RULE_inheritance = 2, RULE_method = 3, 
		RULE_property = 4, RULE_propertydef = 5, RULE_cparts = 6, RULE_func = 7, 
		RULE_extconst = 8, RULE_selector = 9, RULE_selectorNamedParam = 10, RULE_selectorParam = 11, 
		RULE_returntype = 12, RULE_listofvariables = 13, RULE_var_type_name = 14, 
		RULE_variable = 15, RULE_vartype = 16, RULE_block = 17, RULE_simple_vartype_name = 18, 
		RULE_simple_vartype = 19, RULE_visibility = 20;
	public static final String[] ruleNames = {
		"classdef", "protinheritance", "inheritance", "method", "property", "propertydef", 
		"cparts", "func", "extconst", "selector", "selectorNamedParam", "selectorParam", 
		"returntype", "listofvariables", "var_type_name", "variable", "vartype", 
		"block", "simple_vartype_name", "simple_vartype", "visibility"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'@interface'", "'@protocol'", "'('", "')'", "'@end'", "'<'", "','", 
		"'>'", "':'", "'@property'", "';'", "'atomic'", "'nonatomic'", "'readwrite'", 
		"'class'", "'retain'", "'strong'", "'assign'", "'weak'", "'copy'", "'readonly'", 
		"'getter'", "'='", "'const'", "'...'", "'+'", "'-'", "'['", "']'", "'*'", 
		"'id<'", "'^'", "'@private'", "'@public'", "'@protected'", "'@package'", 
		null, null, null, "'UI_APPEARANCE_SELECTOR'", "'UIKIT_EXTERN'", "'_Nullable'", 
		"'_Nonnull'", "'extern'", "'oneway'", "'unsigned'", "'__kindof'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "LINE_COMMENT", "COMMENT", "WS", "UI_APPEARANCE_SELECTOR", "UIKIT_EXTERN", 
		"NULLABLE", "NONNULL", "EXTERN", "ONEWAY", "UNSIGNED", "KINDOF", "ID", 
		"VERSION", "NUM"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CMAnnot.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CMAnnotParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ClassdefContext extends ParserRuleContext {
		public Token classtype;
		public Token classname;
		public Token category;
		public List<TerminalNode> ID() { return getTokens(CMAnnotParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CMAnnotParser.ID, i);
		}
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public ClassdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterClassdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitClassdef(this);
		}
	}

	public final ClassdefContext classdef() throws RecognitionException {
		ClassdefContext _localctx = new ClassdefContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((ClassdefContext)_localctx).classtype = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
				((ClassdefContext)_localctx).classtype = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(43);
			((ClassdefContext)_localctx).classname = match(ID);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(44);
				match(T__2);
				setState(45);
				((ClassdefContext)_localctx).category = match(ID);
				setState(46);
				match(T__3);
				}
			}

			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(49);
				inheritance();
				}
			}

			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__23) | (1L << T__25) | (1L << T__26) | (1L << T__30) | (1L << ID))) != 0)) {
				{
				{
				setState(52);
				method();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProtinheritanceContext extends ParserRuleContext {
		public Token inh;
		public List<TerminalNode> ID() { return getTokens(CMAnnotParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CMAnnotParser.ID, i);
		}
		public ProtinheritanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_protinheritance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterProtinheritance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitProtinheritance(this);
		}
	}

	public final ProtinheritanceContext protinheritance() throws RecognitionException {
		ProtinheritanceContext _localctx = new ProtinheritanceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_protinheritance);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__5);
			setState(61);
			((ProtinheritanceContext)_localctx).inh = match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(62);
				match(T__6);
				setState(63);
				((ProtinheritanceContext)_localctx).inh = match(ID);
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(69);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InheritanceContext extends ParserRuleContext {
		public Token classname;
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public ProtinheritanceContext protinheritance() {
			return getRuleContext(ProtinheritanceContext.class,0);
		}
		public InheritanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inheritance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterInheritance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitInheritance(this);
		}
	}

	public final InheritanceContext inheritance() throws RecognitionException {
		InheritanceContext _localctx = new InheritanceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inheritance);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__8);
			setState(72);
			((InheritanceContext)_localctx).classname = match(ID);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(73);
				protinheritance();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case T__23:
			case T__30:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				property();
				}
				break;
			case T__25:
			case T__26:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				selector();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public Token objc;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public List<PropertydefContext> propertydef() {
			return getRuleContexts(PropertydefContext.class);
		}
		public PropertydefContext propertydef(int i) {
			return getRuleContext(PropertydefContext.class,i);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitProperty(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_property);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				((PropertyContext)_localctx).objc = match(T__9);
				setState(81);
				variable();
				setState(82);
				match(T__10);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				((PropertyContext)_localctx).objc = match(T__9);
				setState(85);
				match(T__2);
				setState(86);
				propertydef();
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(87);
					match(T__6);
					setState(88);
					propertydef();
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(94);
				match(T__3);
				setState(95);
				variable();
				setState(96);
				match(T__10);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				variable();
				setState(99);
				match(T__10);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertydefContext extends ParserRuleContext {
		public Token clazz;
		public Token strong;
		public Token weak;
		public Token copy;
		public Token readonly;
		public Token getter;
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public PropertydefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertydef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterPropertydef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitPropertydef(this);
		}
	}

	public final PropertydefContext propertydef() throws RecognitionException {
		PropertydefContext _localctx = new PropertydefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_propertydef);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(T__11);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(T__12);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				match(T__13);
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				((PropertydefContext)_localctx).clazz = match(T__14);
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				((PropertydefContext)_localctx).strong = match(T__15);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				((PropertydefContext)_localctx).strong = match(T__16);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 7);
				{
				setState(109);
				((PropertydefContext)_localctx).weak = match(T__17);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 8);
				{
				setState(110);
				((PropertydefContext)_localctx).weak = match(T__18);
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 9);
				{
				setState(111);
				((PropertydefContext)_localctx).copy = match(T__19);
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				((PropertydefContext)_localctx).readonly = match(T__20);
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 11);
				{
				setState(113);
				match(T__21);
				setState(114);
				match(T__22);
				setState(115);
				((PropertydefContext)_localctx).getter = match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CpartsContext extends ParserRuleContext {
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public ExtconstContext extconst() {
			return getRuleContext(ExtconstContext.class,0);
		}
		public CpartsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cparts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterCparts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitCparts(this);
		}
	}

	public final CpartsContext cparts() throws RecognitionException {
		CpartsContext _localctx = new CpartsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cparts);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				func();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				extconst();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public Token constant;
		public Token name;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public ListofvariablesContext listofvariables() {
			return getRuleContext(ListofvariablesContext.class,0);
		}
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitFunc(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(122);
				((FuncContext)_localctx).constant = match(T__23);
				}
				break;
			}
			setState(125);
			vartype();
			setState(126);
			((FuncContext)_localctx).name = match(ID);
			setState(127);
			match(T__2);
			setState(128);
			listofvariables();
			setState(129);
			match(T__3);
			setState(130);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtconstContext extends ParserRuleContext {
		public Token constant;
		public Token name;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public ExtconstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extconst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterExtconst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitExtconst(this);
		}
	}

	public final ExtconstContext extconst() throws RecognitionException {
		ExtconstContext _localctx = new ExtconstContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_extconst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(132);
				((ExtconstContext)_localctx).constant = match(T__23);
				}
				break;
			}
			setState(135);
			vartype();
			setState(136);
			((ExtconstContext)_localctx).name = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorContext extends ParserRuleContext {
		public Token name;
		public Token retain;
		public Token varargs;
		public ReturntypeContext returntype() {
			return getRuleContext(ReturntypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public SelectorParamContext selectorParam() {
			return getRuleContext(SelectorParamContext.class,0);
		}
		public List<SelectorNamedParamContext> selectorNamedParam() {
			return getRuleContexts(SelectorNamedParamContext.class);
		}
		public SelectorNamedParamContext selectorNamedParam(int i) {
			return getRuleContext(SelectorNamedParamContext.class,i);
		}
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterSelector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitSelector(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_selector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			returntype();
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(139);
				((SelectorContext)_localctx).name = match(ID);
				}
				break;
			case T__15:
				{
				setState(140);
				((SelectorContext)_localctx).retain = match(T__15);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(143);
				selectorParam();
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8 || _la==ID) {
					{
					{
					setState(144);
					selectorNamedParam();
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(152);
				match(T__6);
				setState(153);
				((SelectorContext)_localctx).varargs = match(T__24);
				}
			}

			setState(156);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorNamedParamContext extends ParserRuleContext {
		public Token paramname;
		public SelectorParamContext selectorparam;
		public SelectorParamContext selectorParam() {
			return getRuleContext(SelectorParamContext.class,0);
		}
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public SelectorNamedParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectorNamedParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterSelectorNamedParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitSelectorNamedParam(this);
		}
	}

	public final SelectorNamedParamContext selectorNamedParam() throws RecognitionException {
		SelectorNamedParamContext _localctx = new SelectorNamedParamContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_selectorNamedParam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(158);
				((SelectorNamedParamContext)_localctx).paramname = match(ID);
				}
			}

			setState(161);
			((SelectorNamedParamContext)_localctx).selectorparam = selectorParam();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorParamContext extends ParserRuleContext {
		public Token variablename;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CMAnnotParser.ID, 0); }
		public SelectorParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectorParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterSelectorParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitSelectorParam(this);
		}
	}

	public final SelectorParamContext selectorParam() throws RecognitionException {
		SelectorParamContext _localctx = new SelectorParamContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_selectorParam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__8);
			setState(164);
			match(T__2);
			setState(165);
			vartype();
			setState(166);
			match(T__3);
			setState(167);
			((SelectorParamContext)_localctx).variablename = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturntypeContext extends ParserRuleContext {
		public Token isstatic;
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public ReturntypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returntype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).enterReturntype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CMAnnotListener ) ((CMAnnotListener)listener).exitReturntype(this);
		}
	}

	public final ReturntypeContext returntype() throws RecognitionException {
		ReturntypeContext _localctx = new ReturntypeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_returntype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			((ReturntypeContext)_localctx).isstatic = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==T__25 || _la==T__26) ) {
				((ReturntypeContext)_localctx).isstatic = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(170);
			match(T__2);
			setState(171);
			vartype();
			setState(172);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
